--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             justify-content: space-between;
             background-color: #121212;
             color: white;
-            padding: 20px;
+            padding: 40px 20px; /* Increased top padding for more header space */
         }
         .search-container {
             width: 50%;
@@ -128,4 +128,3 @@
     </script>
 </body>
 </html>
-
