--- a/index.html
+++ b/index.html
@@ -239,11 +239,8 @@
         }
 
         function playInPlayer(url) {
-           /* document.getElementById('player').src = `https://w.soundcloud.com/player/?url=${encodeURIComponent(url)}`;*/
-                 url = url.replace("m.soundcloud.com", "soundcloud.com"); 
-
-            // Force the desktop embed
-                document.getElementById('player').src = `https://w.soundcloud.com/player/?url=${encodeURIComponent(url)}&visual=true`;
+           document.getElementById('player').src = `https://w.soundcloud.com/player/?url=${encodeURIComponent(url)}`;
+              
         }
     </script>
 </body>
